<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <!-- <item
        android:id="@+id/navigation_color_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_color_settings" />-->
    <item
        android:id="@+id/navigation_share_list"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/title_share_list" />

    <item
        android:id="@+id/navigation_color_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_color_settings" />

    <item
        android:id="@+id/navigation_add_item"
        android:icon="@drawable/ic_add_list"
        android:title="@string/title_add_item" />
    <item
        android:id="@+id/navigation_my_list"
        android:icon="@drawable/ic_menu_my_list"
        android:title="@string/title_my_list" />
    <item
        android:id="@+id/navigation_list_detail_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

</menu>
