<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/register_default_padding"
    android:paddingRight="@dimen/register_default_padding"
    android:paddingTop="@dimen/register_default_padding"
    tools:context="com.mcn.honeydew.ui.forgotPassword.locateAccountFragment.LocateAccountFragment">

    <TextView
        style="@style/TextAppearance.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/locate_my_honey_dew_account"
        android:textColor="@color/white"
        android:textSize="@dimen/textview_size_m3" />

    <TextView
        style="@style/TextAppearance.Text.Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/label_email_or_phone"
        android:textColor="@color/white"
        android:textSize="@dimen/textview_size_s3" />


    <EditText
        android:id="@+id/edit_email"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:padding="@dimen/email_edit_text_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/textview_size_s3" />

    <Button
        android:id="@+id/text_search"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/label_search" />
</LinearLayout>
