<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/register_default_padding"
    android:paddingRight="@dimen/register_default_padding"
    android:paddingTop="@dimen/register_default_padding"
    tools:context="com.mcn.honeydew.ui.forgotPassword.resetPasswordFragment.ResetPasswordFragment">

    <TextView
        style="@style/TextAppearance.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/label_reset_password_for_honey_dew"
        android:textColor="@color/white"
        android:textSize="@dimen/textview_size_m3" />

    <EditText
        android:id="@+id/edit_new_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:gravity="center"
        android:hint="@string/label_new_password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="@dimen/email_edit_text_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/textview_size_s3" />

    <EditText
        android:id="@+id/edit_confirm_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:gravity="center"
        android:hint="@string/label_confirm_password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="@dimen/email_edit_text_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/textview_size_s3" />

    <Button
        android:id="@+id/text_submit"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/label_submit" />

</LinearLayout>
