<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:paddingLeft="@dimen/register_default_padding"
    android:paddingRight="@dimen/register_default_padding"
    tools:context="com.mcn.honeydew.ui.changePassword.ChangePasswordActivity">

    <TextView
        android:id="@+id/text_sub_heading"
        style="@style/HeadingTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/heading_margin_top"
        android:gravity="center"
        android:text="@string/change_password_heading"
        android:textColor="@color/white" />

    <View
        android:id="@+id/view_under_line"
        android:layout_width="@dimen/underline_view_width"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/underline_view_margin_top"
        android:background="@color/white" />

    <EditText
        android:id="@+id/edit_old_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:gravity="center"
        android:hint="@string/label_old_password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="@dimen/email_edit_text_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/textview_size_s3" />

    <EditText
        android:id="@+id/edit_new_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:gravity="center"
        android:hint="@string/label_new_password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="@dimen/email_edit_text_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/textview_size_s3" />

    <EditText
        android:id="@+id/edit_confirm_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:gravity="center"
        android:hint="@string/label_confirm_password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="@dimen/email_edit_text_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/textview_size_s3" />

    <TextView
        android:id="@+id/text_submit"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/label_submit"
        android:textSize="@dimen/textview_size_s3" />
</LinearLayout>
