<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:paddingLeft="@dimen/register_default_padding"
    android:paddingRight="@dimen/register_default_padding">


    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/text_sub_heading"
            style="@style/HeadingTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/heading_margin_top"
            android:gravity="center"
            android:text="@string/register_heading"
            android:textColor="@color/white" />

        <View
            android:id="@+id/view_under_line"
            android:layout_width="@dimen/underline_view_width"
            android:layout_height="2dp"
            android:layout_below="@id/text_sub_heading"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/underline_view_margin_top"
            android:background="@color/white" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_top"
        android:isScrollContainer="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_first_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_margin_top"
                android:hint="@string/label_first_name"
                android:inputType="textCapWords"
                android:lines="1"
                android:maxLength="15"
                android:padding="@dimen/email_edit_text_padding" />


            <EditText
                android:id="@+id/edit_last_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_margin_top"
                android:hint="@string/label_last_name"
                android:inputType="textCapWords"
                android:lines="1"
                android:maxLength="15"
                android:padding="@dimen/email_edit_text_padding" />


            <EditText
                android:id="@+id/edit_email"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_margin_top"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="@dimen/email_edit_text_padding" />

            <LinearLayout
                android:id="@+id/layout_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_margin_top"
                android:background="@drawable/edit_text_border_bg">

                <TextView
                    android:id="@+id/text_country_code"
                    style="@style/TextAppearance.Text.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/email_edit_text_padding"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/textview_size_s3"
                    tools:text="+91" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/edit_phone_number"
                    style="@style/TextAppearance.Text.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:digits="0123456789"
                    android:hint="@string/label_phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:lines="1"
                    android:padding="@dimen/email_edit_text_padding"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/textview_size_s3" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_margin_top"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="@dimen/email_edit_text_padding" />


            <EditText
                android:id="@+id/edit_confirm_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_margin_top"
                android:hint="@string/label_confirm_password"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="@dimen/email_edit_text_padding" />

            <TextView
                android:id="@+id/text_sign_up"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_margin_top"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/register_heading" />

            <TextView
                android:id="@+id/text_sign_in"
                style="@style/TextAppearance.Text.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/register_margin_top"
                android:gravity="center"
                android:text="@string/label_have_account"
                android:textSize="@dimen/textview_size_m3" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>