<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/share_list_label_text_bg"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/textview_size_m1"
                tools:text="Share List Name" />

            <TextView
                android:id="@+id/text_user_list_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorLightGray"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/share_title"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_size_m1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_owner"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/text_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/message_list_not_shared"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_size_m1"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_other_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_label_list_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:text="@string/label_list_owner"
                android:textColor="@color/black"
                android:textSize="@dimen/textview_size_m1" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/share_list_label_text_bg"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/textview_size_m1"
                tools:text="abc@example.com" />

            <Switch
                android:id="@+id/switch_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/label_get_notification"
                android:textSize="@dimen/textview_size_m1" />
        </LinearLayout>


    </RelativeLayout>
</androidx.core.widget.NestedScrollView>